--- a/templates/session/detailSession.html.twig
+++ b/templates/session/detailSession.html.twig
@@ -21,8 +21,7 @@
             <div class="planning">
                 
                 <div>
-                    <h4 class="subTitleSession">Modules programmés</h4>   
-                    
+                    <h4 class="subTitleSession">Modules programmés</h4>                     
                 
                     <div class="listModuleSession">
                         {% for program in session.programs %} 
@@ -54,8 +53,16 @@
                     <h4 class="subTitleSession">Modules non programmés</h4>
                     {% for noProgrammedModule in noProgrammed %}
                         <p>
-                            <a href="{{ path('app_module') }}">{{ noProgrammedModule.libelleModule }} </a>
-                            {# <a href="{{ path('removeModuleToSession', {'sessionId':session.id, 'programId':program.id}) }}"><i class="fa-solid fa-plus"></i></a> #}
+                            {{ noProgrammedModule.libelleModule }}  
+
+                            {# <a href="{{ path('addModuleToSession', {'session':session.id, 'module':noProgrammedModule.id}) }}"> </a> #}
+
+                                <form method="POST" action="{{ path('addModuleToSession', {'session': session.id, 'module': noProgrammedModule.id}) }}">
+                                    <input class="inputJ" type="number" min="0" name="nbDay" placeholder="jours" required>
+                                    <button type="submit">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </button>
+                            </form>
                         </p>
                     {% endfor %}            
                 </div>
