--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,23 +8,26 @@
 
     {{ form_errors(registrationForm) }}
    
+    
     {{ form_start(registrationForm) }}
 
+    <section class="sectionSecu">
+        <div class="register">
 
-    <section class="register">
-        <h1 class="h3 mb-3 font-weight-normal">S'enregistrer</h1>
+            
+                <h1 class="h3 mb-3 font-weight-normal">S'enregistrer</h1>
 
-        {{ form_row(registrationForm.email) }}
-        
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe'
-        }) }}
-        <p class="infosPwd">Votre mot de passe doit contenir 12 caractères dont 1 majuscule, 1 chiffre et 1 caractère spécial</p>
+                {{ form_row(registrationForm.email) }}
+                
+                {{ form_row(registrationForm.plainPassword, {
+                    label: 'Mot de passe'
+                }) }}
+                <p class="infosPwd">Votre mot de passe doit contenir 12 caractères dont 1 majuscule, 1 chiffre et 1 caractère spécial</p>
 
-        {{ form_row(registrationForm.agreeTerms) }}
+                {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn submit">S'enregistrer</button>
-    {{ form_end(registrationForm) }}
-
+                <button type="submit" class="btn submit">S'enregistrer</button>
+            {{ form_end(registrationForm) }}
+        </div>
 </section>
 {% endblock %}
