--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -16,14 +16,17 @@
 body {        
     height: 100vh;
     background: var(--backColor);
-    /* display: flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; */
 }
 
 h1 {
     text-align: center;
+}
+
+section {
+    margin-top: 10%;
 }
 
 .icon {
@@ -37,8 +40,8 @@ h1 {
 
 /* Navbar */
 #navbar {
-    /* position:fixed;  */
-    /* top:0; */
+    position:fixed; 
+    top:0;
     width: 100%;
     background-color: var(--backSection);
     padding: 1% 5%;
