--- a/assets/styles/form.css
+++ b/assets/styles/form.css
@@ -23,7 +23,7 @@ button {
     width: 50%;
     padding: 1%;
     background-color: #5D388D;
-    color: white;
+    color: #e8dafc;
     font-size: 1em;
     border-radius: 10px;
     
