--- a/templates/trainer/index.html.twig
+++ b/templates/trainer/index.html.twig
@@ -10,18 +10,23 @@
         <a href="{{ path('add_trainer') }}"><i class="fa-solid fa-plus"></i></a>
     </div>
 
-    <div class="listTrainer"> 
-
-        {% for trainer in trainers %}
-            <div>
-                <p>
-                    <a href="{{ path('app_profilTrainer', {'id':trainer.id}) }}">{{ trainer.nameTrainer }} {{ trainer.firstname }}</a></p>
-                    <a href="{{ path('edit_trainer', {'id':trainer.id}) }}"><i class="fa-solid fa-pencil"></i></a>
-                    <a href="{{ path('app_deleteTrainer', {'id':trainer.id}) }}"><i class="fa-solid fa-trash"></i></a>
-                </p>
-            </div>
-   
-        {% endfor %}
+    <div class="blocTrainer"> 
+        <div class="listTrainer">
+            {% for trainer in trainers %}           
+                    
+                        <p> 
+                            <a href="{{ path('app_profilTrainer', {'id':trainer.id}) }}">{{ trainer.nameTrainer }} {{ trainer.firstname }}</a>
+                        </p>
+                    
+                        <p>
+                            <a href="{{ path('edit_trainer', {'id':trainer.id}) }}"><i class="fa-solid fa-pencil"></i></a>
+                            <a href="{{ path('app_deleteTrainer', {'id':trainer.id}) }}"><i class="fa-solid fa-trash"></i></a>
+                        </p>
+                
+                
+    
+            {% endfor %}
+        </div>
     </div>
 </section>
 
