--- a/assets/styles/internTrainerCat.css
+++ b/assets/styles/internTrainerCat.css
@@ -1,10 +1,10 @@
 /* Intern */
-.blocIntern, .blocTrainer {
+.blocIntern, .blocTrainer, .blocCat {
     display: flex;
     gap: 15px;
 }
 
-.listIntern {
+.listIntern, .listTrainer, .listCat {
     width: 30%;
     background-color: var(--backSection);
     padding: 1%;
@@ -40,12 +40,3 @@
     border-radius: 10px;
 }
 
-.listTrainer {
-    width: 30%;
-    background-color: var(--backSection);
-    padding: 1%;
-    border-radius: 10px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto;
-}
