--- a/assets/styles/form.css
+++ b/assets/styles/form.css
@@ -6,6 +6,14 @@
     gap: 20px;
 }
 
+.formInput select {
+    width: 50%;
+    padding: 2%;
+    margin-left: 3%;
+    background-color: white;
+    border-radius: 10px;
+}
+
 input {
     width: 70%;
     margin-left: 2%;
