--- a/assets/styles/internTrainerCatModule.css
+++ b/assets/styles/internTrainerCatModule.css
@@ -1,10 +1,10 @@
 /* Intern */
-.blocIntern, .blocTrainer, .blocCat {
+.blocIntern, .blocTrainer, .blocCat, .blocModule {
     display: flex;
     gap: 15px;
 }
 
-.listIntern, .listTrainer, .listCat {
+.listIntern, .listTrainer, .listCat, .listModule {
     width: 30%;
     background-color: var(--backSection);
     padding: 1%;
@@ -34,7 +34,7 @@
     border-radius: 10px;
 }
 
-.listCat, .addCat, .modifCat {
+.listCat, .addCat, .modifCat, .addModule, .modifModule {
     background-color: var(--backSection);
     padding: 1%;
     border-radius: 10px;
