--- a/templates/module/index.html.twig
+++ b/templates/module/index.html.twig
@@ -10,15 +10,19 @@
         <a href="{{ path('add_module') }}"><i class="fa-solid fa-plus"></i></a>    
     </div>
 
-    <div class="listModule"> 
-        {% for module in modules %}
-            <p>
-                {{ module.libelleModule }}
-                <a href="{{ path('edit_module', {'id':module.id}) }}"><i class="fa-solid fa-pencil"></i></a>
-                <a href="{{ path('app_deleteModule', {'id':module.id}) }}"><i class="fa-solid fa-trash"></i></a>
-            </p>
-        {% endfor %}
-        
+    <div class="blocModule">
+        <div class="listModule"> 
+            {% for module in modules %}
+                <p>
+                    {{ module.libelleModule }}
+                </p>
+                    
+                <p>
+                    <a href="{{ path('edit_module', {'id':module.id}) }}"><i class="fa-solid fa-pencil"></i></a>
+                    <a href="{{ path('app_deleteModule', {'id':module.id}) }}"><i class="fa-solid fa-trash"></i></a>
+                </p>
+            {% endfor %}
+        </div>
     </div>
 </section>
 
