--- a/assets/styles/internTrainerCatModuleTraining.css
+++ b/assets/styles/internTrainerCatModuleTraining.css
@@ -1,10 +1,10 @@
 /* Intern */
-.blocIntern, .blocTrainer, .blocCat, .blocModule {
+.blocIntern, .blocTrainer, .blocCat, .blocModule, .blocTraining {
     display: flex;
     gap: 15px;
 }
 
-.listIntern, .listTrainer, .listCat, .listModule {
+.listIntern, .listTrainer, .listCat, .listModule, .listTraining {
     width: 30%;
     background-color: var(--backSection);
     padding: 1%;
@@ -21,22 +21,17 @@
     border-radius: 10px;
 }
 
-.addIntern, .modifIntern {
+
+
+.addIntern, .modifIntern
+.addCat, .modifCat,
+.addModule, .modifModule
+.addTrainer, .modifTrainer,
+.addTraining, .modifTraining {
     background-color: var(--backSection);
     padding: 1%;
     border-radius: 10px;
 }
 
-/* Trainer */
-.listTrainer, .addTrainer, .modifTrainer {
-    background-color: var(--backSection);
-    padding: 1%;
-    border-radius: 10px;
-}
 
-.listCat, .addCat, .modifCat, .addModule, .modifModule {
-    background-color: var(--backSection);
-    padding: 1%;
-    border-radius: 10px;
-}
 
