--- a/templates/intern/profilIntern.html.twig
+++ b/templates/intern/profilIntern.html.twig
@@ -18,7 +18,7 @@
 
         <div class="infosIntern">
             <p>{{ intern.nameIntern}} {{ intern.firstname}} </p>
-            <a href="{{ path('app_deleteIntern', {'id':intern.id})) }}"><i class="fa-solid fa-trash"></i></a>
+            <a href="{{ path('app_deleteIntern', {'id':intern.id}) }}"><i class="fa-solid fa-trash"></i></a>
             
             <p>Affecté(e) à : {{ intern.city}}</p>
             <div>
