--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,12 @@
                     <li><a href="{{ path('app_trainer') }}">Formateurs</a></li>
                     <li><a href="{{ path('app_intern') }}">Stagiaires</a></li>
                 </ol>
+
+                <div class="burger_button">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
             </nav>
         {# {% endif %} #}
 
