--- a/templates/trainer/newTrainer.html.twig
+++ b/templates/trainer/newTrainer.html.twig
@@ -8,7 +8,7 @@
 <section>
     <div class="titre">
         {% if edit %}
-            <h3 >Modifier un stagiaire </h3>
+            <h3 >Modifier un formateur </h3>
         {% else %}
             <h3 >Ajouter un formateur </h3>
         {% endif %}
